[package]
name = "shuttle-candle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
axum = "0.7.4"
candle-core = { version = "0.4.1" }
candle-nn = "0.4.1"
candle-transformers = { version = "0.4.1" }
hf-hub = { version = "0.3.2" }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokenizers = "0.19.1"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
